--- a/Unit_1/index.html
+++ b/Unit_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="/CSS/style.css">
 	<title>Rosenkrans Garden and Recipes</title>
 </head>
 <body>
