removed bullets and added a recipe
removed bullets and added a recipe

--- a/unit4/index.html
+++ b/unit4/index.html
@@ -13,7 +13,7 @@
 
 	
 
-	<ul>
+	<ul style="list-style-type: none;">
 		<li>Garden Pics</li>
 		<li>Recipes</li>
 		<li>About Me</li>
@@ -33,12 +33,23 @@
 
 
 <h1>Recipes</h1>
-<p>LIST OF RECIPES HYPERLINKED</p>
+<p>---LIST OF RECIPES HYPERLINKED---</p>
 
 
 
-<P>NAME OF RECIPE</P>
-<p>list of ingredients followed by recipe</p>
+<P>BROILED TOMATOES AU GRATIN</P>
+<ul style="list-style-type: none;">
+	<li>3 large tomatoes, cut into ½” slices</li>                
+	<li>½ lb bacon, diced</li>
+	<li>1 medium onion, chopped</li>                             
+	<li>¼ lb shredded swiss or mozzarella</li>
+	<li>1 T dried basil</li>                                                 
+	<li>2 T dried parsley</li>
+	<li>salt and freshly ground pepper</li>                     
+</ul>
+<p>
+	Cook bacon until slightly crisp, drain and set aside.  Saute onions in that pan until soft. Mix the bacon, onion, cheese, and spices.  Preheat the broiler. Arrange the tomatoes on an oiled broiler pan and sprinkle the top with salt and pepper.  Top each tomato slice with some of the bacon mixture and broil the slices just until the cheese melts. Serve hot.  Makes about 8 servings (unless you love them as much as we do, then, about 6).
+</p>
 
 
 
