Adding Unit 6 Files
Adding Unit 6 Files

--- a/unit5/index.html
+++ b/unit5/index.html
@@ -65,6 +65,8 @@
 <section id="squash-casserole" class="background2">
 
 		<h3>MARK'S SQUASH CASSEROLE</h3>
+
+		
 		<ul style="list-style-type: none;" class="ingredients">
 			<li>6-7 yellow squash</li>                
 			<li>2 Cups shredded sharp cheddar cheese</li>
@@ -74,8 +76,11 @@
 			<li>1 tsp pepper</li>
 			<li>1 stick butter, melted</li>                     
 		</ul>
+		
 
+		
 		<img src="images/squashcasserole2.jpg" alt="picture of squash casserole" class="recipe-image">
+		
 
 		<article>
 			<p>Cook squash until mushy and drain</p>
@@ -122,7 +127,7 @@
 		<img src="images/mark2.jpg" alt="picture of gardener" class="small-image">
 
 		<article>
-			<p>My name is Mark Rosenkrans and I have had an urban garden for 6 years. This season, I decided to try growing many things I have never tried before. Planting in two separate locations in Atlanta, I've learned the hard way how to deal with pests of all types. This has only made me appreciate and love this hobby even more.
+			<p>My name is Mark Rosenkrans and I have had an urban garden for 6 years. This season, I decided to try growing many things I have never tried before. Planting in two separate locations in Atlanta, I've learned the hard way how to deal with pests of all types. This has only made me appreciate and love this hobby even more. 
 			</p>
 
 			<p>Contact me: 
@@ -132,6 +137,15 @@
 		</article>
 
 	</section>
+
+
+
+
+<footer>
+
+
+</footer>
+
 
 </div>
 </body>
